--- a/wiki/LibrariesEnginesAndGameFrameworks.wiki
+++ b/wiki/LibrariesEnginesAndGameFrameworks.wiki
@@ -1,5 +1,5 @@
 = Libraries, engines and games frameworks =
-<p>It is important to differenciate the tools that helps in the game development process acceleration, as confusion involving these concepts are quite common.
+<p>It is important to differenciate the tools that helps in the game development process acceleration, as confusions involving these concepts are quite common.
 
 <p>*Libraries* are composed of a set of classes and generic functions, created to assist the resolution of commom problems in game development.
 
