Edited wiki page LibrariesEnginesAndGameFrameworks through web user interface.

--- a/wiki/LibrariesEnginesAndGameFrameworks.wiki
+++ b/wiki/LibrariesEnginesAndGameFrameworks.wiki
@@ -7,4 +7,4 @@
 
 <p>*Game engines* (or simply engines) are development kits, distributed as APIs or as a set of tools or libraries used to simplify and abstract the development process, taking advantage of some features common to all games. Generally, the engines are responsible for implementing the data processing operations abstracted high level and to generate low-level data that can be understood by the hardware, such as, calculation of rotation and adjustment of the frame rate per second  to an optimum value in accordance with the device on which the game is running.
 
-<p>Among the functionality typically provided by an engine can be mentioned: screen refresh, graphics rendering, physics simulation, animation, sound and artificial intelligence. Thus, the engines offers a significant increase in flexibility in process development as a whole, packaging a number of features that can be used to create different games.
+<p>Among the functionality typically provided by an engine can be mentioned: screen refresh, graphics rendering, physics simulation, animation, sound and artificial intelligence. Thus, the engines offers a significant increase in flexibility in process development as a whole, as it packages a number of features that can be used to create different games.
