Edited wiki page LibrariesEnginesAndGameFrameworks through web user interface.

--- a/wiki/LibrariesEnginesAndGameFrameworks.wiki
+++ b/wiki/LibrariesEnginesAndGameFrameworks.wiki
@@ -1,3 +1,5 @@
+#Libraries, engines and games frameworks
+
 = Libraries, engines and games frameworks =
 <p>It is important to differenciate the tools that helps in the game development process acceleration, as confusions involving these concepts are quite common.
 
