--- a/wiki/TheCactus2DObjectModel.wiki
+++ b/wiki/TheCactus2DObjectModel.wiki
@@ -6,8 +6,7 @@ In the development of a game, it is necessary to represent all the elements that
 
 In addition to the game objects, it must also be set the different behaviors of each one of them. For this reason, some engines use an object model based in inheritance / specialization. In this model, shown in Figure 1, the classes that represent game objects must inherit from a core class, often called GameObject. Thus, a game object can be seen as a reusable container of features and basic attributes such as position and orientation, for example.
 
-
-<a href="http://sertaogames.files.wordpress.com/2012/02/figure-1.png"><img class="size-full wp-image-310 " title="Figure 1" src="http://sertaogames.files.wordpress.com/2012/02/figure-1.png?w=584" alt=""   /></a>Figure 1. Inherated/Specialization Model of Game Objects.
+<div id="attachment_310" class="wp-caption alignnone" style="width: 257px"><a href="http://sertaogames.files.wordpress.com/2012/02/figure-1.png"><img class="size-full wp-image-310 " title="Figure 1" src="http://sertaogames.files.wordpress.com/2012/02/figure-1.png?w=584" alt=""   /></a><p class="wp-caption-text">Figura 1. Inherated/Specialization Model of Game Objects.</p></div>
 
 For more specific objects, this approach requires the creation of subclasses to implement the specific features. Thus, when we need to model more complex objects, we get stuck on inheritance, since some objects need to inherit from more than one class, thus requiring a model with multiple inheritance, as shown in Figure 2. Not very often you need to have the same behaviors in game objects that are on different sides of the class hierarchy, and in addition, good practice guidance to the objects do not recommend overuse of inheritance due to various problems of reuse that entails.
 
@@ -16,8 +15,7 @@ For more specific objects, this approach requires the creation of subclasses to 
 
 For more specific objects, this approach requires the creation of subclasses to implement the specific features. Thus, when we need to model more complex objects, we get stuck on inheritance, since some objects need to inherit from more than one class, thus requiring a model with multiple inheritance, as shown in Figure 2. Not very often you need to have the same behaviors in game objects that are on different sides of the class hierarchy, and in addition, good practice guidance to the objects do not recommend overuse of inheritance due to various problems of reuse that entails.
 
-
-Figure 3. Componentization Model of Game Objects.
+<div id="attachment_312" class="wp-caption alignnone" style="width: 310px"><a href="http://sertaogames.files.wordpress.com/2012/02/figure-3.png"><img class="size-medium wp-image-312" title="Figure 3" src="http://sertaogames.files.wordpress.com/2012/02/figure-3.png?w=300&#038;h=146" alt="" width="300" height="146" /></a><p class="wp-caption-text">Figure 3. Componentization Model of Game Objects.</p></div>
 
 In this model, it is possible to add and remove behaviors to a single game object, even at runtime, and also combine different behaviors. This last feature is what avoids the need of multiple inheritance and keeps the model closer to the real world, so that any object can have specific and / or common features, if compared to other game objects. In the example of figure 3, if it was necessary to instantiate an object of the car type, but with the behavior of rocket (a rocket car), we just add two components to the game object in use. This does not prevent them from having an object only with the car behavior and another object with only rocket behavior.
 
