--- a/wiki/UsingCactus2D.wiki
+++ b/wiki/UsingCactus2D.wiki
@@ -2,8 +2,6 @@
 
 = Using the Cactus2D =
 
-Creating an Android Project to run the Game
-
 Before read about 2DGamesConcepts and TheCactus2DObjectModel, you're able to read this page. First we need to show how to create and to use a level with the Cactus2D
 
 == Levels ==
@@ -55,6 +53,8 @@ public class Cactus2DSample {
 }
 }}}
 
+== Creating an Android Project to run the Game ==
+
 Up to now, we saw how a game implemented with Cactus2D works and how to run it. Until this moment, the game can run in any architecture, either Mac, Linux or Windows. However, we still need to install the game on an Android device, and for that we will show how to do this step by step.
 
 First thing first, we need to create another project to execute our game in an Android environment. For that, go to Eclipse menu and choose the *File -> New -> Android Project* option. Choose the name Cactus2DSampleAndroid and click Next. On the next screen choose one of the SDK versions which you have installed and click Next one more time. In the last screen of the wizard complete the space with the project package: com.sertaogames.cactus2d and click on Finish. It’ll be created an Android project with a class named Activity (Cactus2DSampleAndroidActivity), which is responsible for initiating the Android application.
@@ -74,7 +74,3 @@ public void onCreate(Bundle savedInstanceState) {
 }
 }}}
 On this piece of code an object of Cactus2DApplication type is created, which is responsible for instantiating the first level to be executed, in other words the level defined on the GameLevel class. The last line shows how to call the libgdx library to execute the game and manage the game loop.
-
-== Compiling and Signing the Game ==
-
-To install your application on an Android device, you need to sign it with a digital certificate which identifies the application’s author. Therefore, to release your application to the public, you need to get a valid private key, compile the application in release mode, sign your application with your private key and then, align the APK package final. These steps can be made on the command line or visually with the eclipse plugin. To do this process with the ADT, you only need to select the project in the “Package Explorer” option, click *File -> Export*, open the Android folder, select “Export Android Application”, and click Next. In the follow, the export assistant will available a step by step how do the process of signature of your application, where you can select a private key which exists or create a new key to sign the application.
