Edited wiki page AudioComponent through web user interface.

--- a/wiki/AudioComponent.wiki
+++ b/wiki/AudioComponent.wiki
@@ -4,13 +4,8 @@
 
 This component tells the engine how to play a certain sound, allowing you to incorporate sound effects in your game. It also has the basic controls to play and stop a sound. An example of how to load an audio sample into an AudioComponent follows:
 
-AudionComponent audio = new AudioComponent("data/sound/sample.wav")
+{{{
+AudioComponent audio = new AudioComponent("data/sound/sample.wav")
+}}}
 
 The process to load and launch an audio sample with Cactus2D is quite simple. In order to use music and sound loop in your game, first you must create a variable of type Sound to store the desired sound passing a string to the class contructor.
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
