Edited wiki page AudioComponent through web user interface.

--- a/wiki/AudioComponent.wiki
+++ b/wiki/AudioComponent.wiki
@@ -13,15 +13,6 @@ AudioComponent audio = new AudioComponent("data/sound/sample.wav")
 To launch the music there is an object in the Cactus2DApplication class called jukebox that can be accessed from any part of the game at any time. It allows the addition of music, thereby creating a kind of playlist. A good tip is that the songs on a jukebox be added to the game and loaded on the first level, so having them available during the game and avoiding performance problems by loading audio files during the other phases of the game.
 
 {{{
-GameObject go = new GameObject("play-button");
-go.AddComponent(new SpriteRenderer(null));
-		
-Texture bt = Cactus2DApplication.loadTexture("data/textures/buttons-all.png",true);
-TextureRegion[][] tmp = TextureRegion.split(bt, 256, 128);
-go.AddComponent(new ButtonComponent(tmp[0][0],tmp[1][0]));
-addGameObject(go);
-		
+Cactus2DApplication.jukeBox.addMusic("data/sound/music01.mp3");
 Cactus2DApplication.jukeBox.play(0);
 }}}
-
-
