--- a/wiki/ButtonComponent.wiki
+++ b/wiki/ButtonComponent.wiki
@@ -5,21 +5,25 @@
 The GUI elements are created in much the same way as other objects described so far, with only some differences in their behaviors. Their sprites should always be rendered above the other Game Objects. To do this simply assign the true value of the property named in spriteRendererComponent gui object.
 
 {{{
-public static GameObject createHistoryButton() {
-	GameObject go = new GameObject("button-info");
+public static GameObject createButton() {
+	GameObject go = new GameObject("button");
 
 	go.transform.getPosition().set(Gdx.graphics.getWidth()-175*Cactus2DApplication.invCameraZoom, 32 * Cactus2DApplication.invCameraZoom);
 		
 	SpriteRenderer sr = new SpriteRenderer(null);
+	sr.gui = true;
 	go.AddComponent(sr);
 		
 	Texture tx = Cactus2DApplication.loadTexture("data/textures/buttons-all.png",true);
 	TextureRegion[][] tmp = TextureRegion.split(tx, 64, 64);
-	SplashHistory.indice = 1;
 	go.AddComponent(new ButtonComponent(tmp[4][7],tmp[5][7]));
 			
 	return go;
 }
 
-}}}
+The ButtonComponent has some attributes:
+normalImage;
+pressedImage;
+currentImage;
 
+}}}
