--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,7 +5,10 @@
 <ul>
 <li>General</li>
 <ul>
-<li>2D Games Concepts</li>
+<li>2DGamesConcepts</li>
+<li>LibrariesEnginesAndGameFrameworks</li>
+<li>LibrariesEnginesAndGameFrameworks</li>
+<li>TheCactus2DObjectModel</li>
 </ul>
 
 </ul>
