Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,9 +5,9 @@
 <ul>
 <li>General</li>
 <ul>
-<li>[2D Games Concepts]</li>
-<li>Libraries Engines And Game Frameworks</li>
-<li>The Cactus2D Object Model</li>
+<li>[ 2D Games Concepts ]</li>
+<li>[Libraries Engines And Game Frameworks]</li>
+<li>[The Cactus2D Object Model]</li>
 </ul>
 
 </ul>
