Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,7 +5,7 @@
 <ul>
 <li>General</li>
 <ul>
-<li>[2D Games Concepts]</li>
+<li>[2DGamesConcepts]2D Games Concepts</li>
 <li>[Libraries Engines And Game Frameworks]</li>
 <li>[The Cactus2D Object Model]</li>
 </ul>
