Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -6,8 +6,8 @@
 <li>General</li>
 <ul>
 <li>[2DGamesConcepts 2D Games Concepts]</li>
-<li>[Libraries Engines And Game Frameworks]</li>
-<li>[The Cactus2D Object Model]</li>
+<li>[LibrariesEnginesAndGameFrameworks Libraries Engines And Game Frameworks]</li>
+<li>[TheCactus2DObjectModel The Cactus2D Object Model]</li>
 </ul>
 
 </ul>
