Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -6,7 +6,7 @@
 <li>General</li>
 <ul>
 <li>[2DGamesConcepts 2D Games Concepts]</li>
-<li>[LibrariesEnginesAndGameFrameworks Libraries Engines And Game Frameworks]</li>
+<li>[LibrariesEnginesAndGameFrameworks Libraries, engines and game frameworks]</li>
 <li>[TheCactus2DObjectModel The Cactus2D Object Model]</li>
 </ul>
 
