--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -14,8 +14,8 @@
 <li>Tutorials</li>
 <ul>
 <li>[Cactus2DComponents	Cactus2D Components]</li>
-  *  [AudioComponent] AudioComponent
-  *  [ButtonComponent] ButtonComponent
+  *  [AudioComponent Audio Component]
+  *  [ButtonComponent Button Component]
 
 </ul>
 <li>[LibrariesEnginesAndGameFrameworks Libraries, engines and game frameworks]</li>
