--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -2,24 +2,13 @@
 
 = Table of Contents =
 
-<ul>
-<li>General</li>
-<ul>
-<li>[2DGamesConcepts 2D Games Concepts]</li>
-<li>[LibrariesEnginesAndGameFrameworks Libraries, engines and game frameworks]</li>
-<li>[TheCactus2DObjectModel The Cactus2D Object Model]</li>
-</ul>
+  *  General
+    *  [2DGamesConcepts 2D Games Concepts]
+    *  [LibrariesEnginesAndGameFrameworks Libraries, engines and game frameworks]
+    *  [TheCactus2DObjectModel The Cactus2D Object Model]
 
-<ul>
-<li>Tutorials</li>
-<ul>
-<li>[Cactus2DComponents	Cactus2D Components]</li>
-  *  [AudioComponent Audio Component]
-  *  [ButtonComponent Button Component]
+  *  Tutorials
 
-</ul>
-<li>[LibrariesEnginesAndGameFrameworks Libraries, engines and game frameworks]</li>
-<li>[TheCactus2DObjectModel The Cactus2D Object Model]</li>
-</ul>
-
-</ul>
+    *  [Cactus2DComponents Cactus2D Components]
+    *  [AudioComponent Audio Component]
+    *  [ButtonComponent Button Component]
