Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -9,5 +9,7 @@
 
   *  Tutorials
     *  [Cactus2DComponents Cactus2D Components]
-    *  [AudioComponent Audio Component]
-    *  [ButtonComponent Button Component]
+    *  [AnimationComponent AnimationComponent]
+    *  [AudioComponent AudioComponent]
+    *  [ButtonComponent ButtonComponent]
+    *  [SpriteRendererComponent SpriteRendererComponent]
