Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -8,9 +8,10 @@
     *  [TheCactus2DObjectModel The Cactus2D Object Model]
 
   *  Tutorials
-    *  [UsingCactus2D Introduction to Cactus2D]
-    *  [Cactus2DComponents Cactus2D Components]
-      *  [AnimationComponent AnimationComponent]
-      *  [AudioComponent AudioComponent]
-      *  [ButtonComponent ButtonComponent]
-      *  [SpriteRendererComponent SpriteRendererComponent]
+    *  Introduction
+      *  [UsingCactus2D Introduction to Cactus2D]
+      *  [Cactus2DComponents Cactus2D Components]
+        *  [AnimationComponent AnimationComponent]
+        *  [AudioComponent AudioComponent]
+        *  [ButtonComponent ButtonComponent]
+        *  [SpriteRendererComponent SpriteRendererComponent]
