--- a/wiki/LibrariesEnginesAndGameFrameworks.wiki
+++ b/wiki/LibrariesEnginesAndGameFrameworks.wiki
@@ -1,4 +1,4 @@
-#summary Libraries, engines and game frameworks
+#summary Libraries, Engines and Game Frameworks
 
 = Libraries, engines and game frameworks =
 <p>It is important to differenciate the tools that helps in the game development process acceleration, as confusions involving these concepts are quite common.
