Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -14,3 +14,4 @@
     *  [AudioComponent AudioComponent]
     *  [ButtonComponent ButtonComponent]
     *  [SpriteRendererComponent SpriteRendererComponent]
+    *  [PlayingMusic Playing Music]
