Edited wiki page AudioComponent through web user interface.

--- a/wiki/AudioComponent.wiki
+++ b/wiki/AudioComponent.wiki
@@ -4,7 +4,7 @@
 
 This component tells the engine how to play a certain sound, allowing you to incorporate sound effects in your game. It also has the basic controls to play and stop a sound. 
 
-In order to use music and sound loop in your game, the process to load and launch an audio sample with Cactus2D is quite simple, first you must create a variable of type AudioComponent to store the desired sound passing a string to the class contructor. An example of how to load an audio sample into an AudioComponent follows:
+The process to load and launch an audio sample with Cactus2D is quite simple, first you must create a variable of type AudioComponent to store the desired sound passing a string to the class contructor. An example of how to load an audio sample into an AudioComponent follows:
 
 {{{
 AudioComponent audio = new AudioComponent("data/sound/sample.wav")
