Edited wiki page ButtonComponent through web user interface.

--- a/wiki/ButtonComponent.wiki
+++ b/wiki/ButtonComponent.wiki
@@ -25,8 +25,6 @@ public static GameObject createButton() {
 
 The ButtonComponent has some attributes of type TextureRegion to define a button that can be instantiated with images:
 
-normalImage: Represent the button unpressed.
-
-pressedImage: To be rendered when the button is pressed.
-
-currentImage: Stores the current state of the button.
+ * normalImage: Represent the button unpressed.
+ * pressedImage: To be rendered when the button is pressed.
+ * currentImage: Stores the current state of the button.
