Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -13,6 +13,6 @@
     *  [AnimationComponent AnimationComponent]
     *  [AudioComponent AudioComponent]
     *  [ButtonComponent ButtonComponent]
-    *  [ProjectSetupInEclipse Creating an Android Project to Run the Game In Eclipse]
+    *  [ProjectSetupInEclipse Project Setup In Eclipse]
     *  [PlayingMusic Playing Music]
     *  [SpriteRendererComponent SpriteRendererComponent]
